Thu Feb  4 19:49:42 1999  arenn's Development Account  <devel@larissa.foo.com>

	* gnu/testlet/java/sql/DatabaseMetaData/TestJdbc10.java: Added this
	test case.

Thu Feb  4 18:45:14 1999  Anthony Green  <green@cygnus.com>

	* gnu/testlet/TestHarness.java (fail): New method.

	* gnu/testlet/java/lang/Character/CharInfo.java: Add missing
	copyright notice.
	* gnu/testlet/java/lang/Character/unicode.java: Ditto.

Thu Feb  4 06:26:53 1999  Anthony Green  <green@cygnus.com>

	* gnu/testlet/java/util/BitSet/jdk10.java: New file from
	Artur Biesiadowski.

Sat Jan 30 18:29:04 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/Clob/ClobTest.java: Added this test case.

Sat Jan 30 18:14:15 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/Blob/BlobTest.java: Added this test case

Sat Jan 30 18:08:54 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/Array/ArrayTest.java: Added this test case.

1999-01-27  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/StringBuffer/plus.java: New file.

Mon Jan 25 18:31:26 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/Connection/TestJdbc10.java: Added this test
	case.

Sun Jan 24 14:03:26 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/sql/Types/TestJdbc20.java: Added this test case.

	* gnu/testlet/java/sql/Types/TestJdbc10.java: Added this test case.

1999-01-14  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Character/getType.java (test): 0x0ad0 is
	now other-letter.  Added 0b70 as other-symbol.

	* gnu/testlet/java/lang/Character/unicode.java (unicode): Ignore
	full width characters.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Fixed typo in upper-case check.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Fixed test to determine when character is a digit.  Now follows
	JCL volume 1.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):